# easy-app

./: .gitignore  README.md  components.d.ts  index.html  package.json  vite.config.ts  手写签名加密包SM2.txt
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: base64.rs  bjca_decrypt.rs  conts.rs  main.rs  parse_cert.rs
src/config/: router.config.ts
src/layouts/: BasicLayout.vue
src/router/: index.ts
src/util/: commonFunc.ts
src/views/: Base64.vue  Decrypt.vue  ParseCert.vue
test-file/: Trust-Sign-Sha256 CA-2 000500.cer  手写签名加密包RSA.txt
