[package]
name = "easy-app"
version = "0.0.1"
description = "A Tauri App"
authors = ["Fare丶梦"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1.2.1"
rsa = "0.9.6"
rand = "0.8.5"
gm-rs = "0.8.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
